block whitespace fix after tabs,new lines were added

--- a/RazorPagesMovie/wwwroot/style.css
+++ b/RazorPagesMovie/wwwroot/style.css
@@ -64,3 +64,6 @@ p {
 .inline-block {
     display: inline-block;
 }
+.block {
+    font-size: 0;
+}
